fix bug in Dockerfile

--- a/.github/workflows/upload_to_docker.yml
+++ b/.github/workflows/upload_to_docker.yml
@@ -5,6 +5,9 @@ on:
     workflows: ["Build for Anaconda"]
     types:
       - completed
+  paths:
+    - 'Dockerfile'
+
 
 jobs:
   push_to_registry:
