fix bug in Dockerfile

--- a/.github/workflows/upload_to_docker.yml
+++ b/.github/workflows/upload_to_docker.yml
@@ -5,9 +5,9 @@ on:
     workflows: ["Build for Anaconda"]
     types:
       - completed
-  paths:
-    - 'Dockerfile'
-
+  push:
+    paths:
+      - 'Dockerfile'
 
 jobs:
   push_to_registry:
