--- a/.conda/meta.yaml
+++ b/.conda/meta.yaml
@@ -19,21 +19,21 @@ requirements:
   host:
     - biopython
     - click
-    - numpy=1.20
+    - numpy=1.23.1
     - pandas
     - pip
     - pyfiglet
-    - python=3.7
+    - python=3.9
     - rdkit
     - tensorflow=2.6.0
     - tensorflow-base=2.6.0
   run:
     - biopython
     - click
-    - numpy=1.20
+    - numpy
     - pandas
     - pyfiglet
-    - python=3.7
+    - python=3.9
     - rdkit
     - tensorflow=2.6.0
     - tensorflow-base=2.6.0
